# xplorer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.env  ros_entrypoint.sh  rosbridge-test.html  setupunity.md  test.md
docs/: XploreR_presentation.pptx  XploreR_report.docx
lecture_demo/: CMakeLists.txt  ROS2_package_tutorial.md  package.xml
lecture_demo/action/: ExampleAction.action
lecture_demo/launch/: demo_publisher.launch.py
lecture_demo/lecture_demo/: demo_publisher.py
lecture_demo/msg/: ExampleMessage.msg
lecture_demo/srv/: ExampleService.srv
lecture_demo/test/: CMakeLists.txt
models/labyrinthe/: model.config  model.sdf
worlds/: labyrinthe.world
worlds/lab-back/: model.config  model.sdf
xplorer_unity/: Assembly-CSharp.csproj  SteamVR.csproj  SteamVR_Actions.csproj  SteamVR_Editor.csproj  SteamVR_Input_Editor.csproj  SteamVR_Windows_EditorHelper.csproj  Unity.XR.Interaction.Toolkit.Samples.StarterAssets.csproj  Unity.gitignore  XploreR_test.sln  handmodel.unitypackage  xplorer_unity.sln  xplorer_unity_backup22-12-08.sln
xplorer_unity/Assets/: RosPublisherExample.cs  RosSubscriberExample.cs  msgbrowser_settings.asset
xplorer_unity/Assets/Northern Lights Pack/: README.txt
xplorer_unity/Assets/Northern Lights Pack/Models/Materials/: NorthernLightsBlue.mat
xplorer_unity/Assets/Northern Lights Pack/Standard Pipeline Specific/: _README.txt
xplorer_unity/Assets/Northern Lights Pack/Standard Pipeline Specific/DemoScene/: Demo Scene Standard.unity  Foreground Standard.mat
xplorer_unity/Assets/Northern Lights Pack/Standard Pipeline Specific/Materials/: NorthernLightsGreen.mat  NorthernLightsParticle.mat  NorthernLightsParticleGreen.mat
xplorer_unity/Assets/Northern Lights Pack/Standard Pipeline Specific/Prefabs/: Northern Lights Curtain.prefab
xplorer_unity/Assets/Northern Lights Pack/URP Specific/: _README.txt
xplorer_unity/Assets/Northern Lights Pack/URP Specific/DemoScene/: Demo Scene URP.unity  Foreground URP.mat
xplorer_unity/Assets/Resources/: ROSConnectionPrefab.prefab
xplorer_unity/Assets/Scenes/: SampleScene.unity
xplorer_unity/Assets/SteamVR_Resources/Resources/: SteamVR_Settings.asset
xplorer_unity/Assets/XR/: XRGeneralSettings.asset  XRGeneralSettingsPerBuildTarget.asset
xplorer_unity/Assets/XR/Settings/: Open VR Settings.asset  OpenXR Package Settings.asset
xplorer_unity/Assets/materials/: New Material.mat
xplorer_unity/ProjectSettings/: EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset
xplorer_unity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
xplorer_ws/src/: README.md
(+20 files in other folders)
